# Python_Piscine

Python_00/ex6/: ft_garden_summary.py
Python_01/ex0/: ft_garden_intro.py
Python_01/ex1/: ft_garden_data.py
Python_01/ex2/: ft_plant_growth.py
Python_01/ex3/: ft_plant_factory.py
Python_01/ex4/: ft_garden_security.py
Python_01/ex5/: ft_plant_types.py
Python_01/ex6/: ft_plant_types.py
Python_02/ex0/: ft_first_exception.py
Python_02/ex1/: ft_different_errors.py
Python_02/ex2/: ft_custom_errors.py
Python_02/ex3/: ft_finally_block.py
Python_02/ex4/: ft_raise_errors.py
Python_02/ex5/: ft_garden_management.py
Python_03/ex0/: ft_command_quest.py
Python_03/ex1/: ft_score_analytics.py
Python_03/ex2/: ft_coordinate_system.py
Python_03/ex3/: ft_achievement_tracker.py
Python_03/ex4/: ft_inventory_system.py
Python_03/ex5/: ft_data_stream.py
Python_03/ex6/: ft_analytics_dashboard.py
Python_04/ex0/: ft_ancient_text.py
Python_04/ex1/: ft_archive_creation.py
Python_04/ex2/: ft_stream_mangement.py
Python_04/ex3/: ft_vault_security.py
Python_04/ex4/: ft_crisis_response.py
Python_05/ex0/: stream_processor.py
Python_05/ex1/: data_stream.py
Python_05/ex2/: nexus_pipeline.py
Python_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_06/alchemy/: __init__.py  elements.py  potions.py
Python_07/ex0/: Card.py  CreatureCard.py  main.py
Python_07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
Python_07/ex2/: Combatable.py  EliteCard.py  (+1 more)
Python_08/ex1/: loading.py  pyproject.toml
(+25 files in other folders)
